fix 'X' button on account modal

--- a/app/assets/templates/account-manager.html.haml
+++ b/app/assets/templates/account-manager.html.haml
@@ -1,7 +1,7 @@
 .accountContent{ 'ng-controller' => 'AccountsController as accountsCtrl' }
   %script{ :type => 'text/ng-template', :id => 'account-form.html' }
     .modal-header
-      %button.close{ 'data-dismiss' => 'modal', 'aria-hidden' => 'true' } &times;
+      %button.close{ 'ng-click' => 'cancel()', 'aria-hidden' => 'true' } &times;
       %h3.modal-title New account
     .modal-body
       %form.css-form{ :name => 'accountForm', :novalidate => true }
