--- a/app/assets/templates/account-manager.html.haml
+++ b/app/assets/templates/account-manager.html.haml
@@ -41,7 +41,7 @@
         %td.col-md-2.text-right {{ record.balance() | number:2 }}
         %td.col-md-2
           .btn-group
-            %button.btn.btn-xs.btn-default{ 'ng-if' => 'record.id()', 'ng-click' => 'accountsCtrl.edit(record.id())' }
+            %button.btn.btn-xs.btn-info{ 'ng-if' => 'record.id()', 'ng-click' => 'accountsCtrl.edit(record.id())' }
               %span.glyphicon.glyphicon-edit{ 'arial-hidden' => 'true' }
-            %button.btn.btn-xs.btn-default{ 'ng-if' => 'record.id()', 'ng-click' => 'accountsCtrl.delete(record.id())', 'confirmation-needed' => 'Are you sure you want to delete this account?' }
+            %button.btn.btn-xs.btn-danger{ 'ng-if' => 'record.id()', 'ng-click' => 'accountsCtrl.delete(record.id())', 'confirmation-needed' => 'Are you sure you want to delete this account?' }
               %span.glyphicon.glyphicon-remove{ 'arial-hidden' => 'true' }
