--- a/app/views/pages/app.html.haml
+++ b/app/views/pages/app.html.haml
@@ -13,6 +13,8 @@
       %entity-manager{ 'ng-show' => 'viewCtrl.isActive("entity-manager")' }
       %account-manager{ 'ng-show' => 'viewCtrl.isActive("account-manager")' }
       %account-register{ 'ng-show' => 'viewCtrl.isActive("account-register")' }
+      %purchase-entry{ 'ng-show' => 'viewCtrl.isActive("purchase-entry")' }
+
     .col-md-3
       .panel.panel-default
         .panel-heading Help
