add 'Enter purchases' to the help sidebar

--- a/app/views/pages/app.html.haml
+++ b/app/views/pages/app.html.haml
@@ -26,5 +26,7 @@
             %dd Add, edit, and remove entities
             %dt Manage accounts
             %dd Add, edit, and remove accounts
+            %dt Enter purchases
+            %dd Enter multiple purchases
             %dt &lt;Account name&gt;
             %dd View the register for the specified account, and add, edit, and remove transactions
