add initial budget manager shell

--- a/app/views/pages/app.html.haml
+++ b/app/views/pages/app.html.haml
@@ -12,6 +12,7 @@
 
       %entity-manager{ 'ng-show' => 'viewCtrl.isActive("entity-manager")' }
       %account-manager{ 'ng-show' => 'viewCtrl.isActive("account-manager")' }
+      %budget-manager{ 'ng-show' => 'viewCtrl.isActive("budget-manager")' }
       %account-register{ 'ng-show' => 'viewCtrl.isActive("account-register")' }
       %purchase-entry{ 'ng-show' => 'viewCtrl.isActive("purchase-entry")' }
 
@@ -26,6 +27,8 @@
             %dd Add, edit, and remove entities
             %dt Manage accounts
             %dd Add, edit, and remove accounts
+            %dt Manage budgets
+            %dd Add, edit, and remove budgets
             %dt Enter purchases
             %dd Enter multiple purchases
             %dt &lt;Account name&gt;
