--- a/app/assets/javascripts/app/view.js.coffee.erb
+++ b/app/assets/javascripts/app/view.js.coffee.erb
@@ -7,6 +7,7 @@ app.controller 'ViewController', ['$scope', '$http', ($scope, $http) ->
     @handlers = [
       new SimpleMatchingHandler('entity-manager', 'Manage entities', ['entity', 'entities']),
       new SimpleMatchingHandler('account-manager', 'Manage accounts', ['accounts']),
+      new SimpleMatchingHandler('budget-manager', 'Manage budgets', ['budgets']),
       new SimpleMatchingHandler('purchase-entry', 'Enter purchases', ['purchases']),
       new AccountMatchingHandler('account-register', 'Register', $scope, $http)
     ]
