--- a/app/assets/templates/budget-manager.html.haml
+++ b/app/assets/templates/budget-manager.html.haml
@@ -37,3 +37,12 @@
               %span.glyphicon.glyphicon-pencil{ 'arial-hidden' => true }
             %button.btn.btn-sm.btn-danger{ :type => 'button', 'ng-click' => 'budgetsCtrl.delete()', 'ng-disabled' => '!budgetsCtrl.selectedBudget', 'confirmation-needed' => 'Are you sure you want to delete this budget?' }
               %span.glyphicon.glyphicon-remove{ 'arial-hidden' => true }
+      .row
+        .col-md-12
+          %table.table.table-striped{ 'ng-show' => 'budgetsCtrl.selectedBudget' }
+            %tr
+              %th Account
+              %th{ 'ng-repeat' => 'period in budgetsCtrl.periods' } {{ period.start_date | date:'MMM yyyy' }}
+              %th Total
+          %p
+            %button.btn.btn-primary{ 'ng-click' => 'budgetsCtrl.newItem()' } Add
