hide and show details

--- a/app/assets/javascripts/app/budgets.js.coffee.erb
+++ b/app/assets/javascripts/app/budgets.js.coffee.erb
@@ -5,6 +5,9 @@ app.controller 'BudgetsController', ['$scope', '$http', '$uibModal', ($scope, $h
   @budgets = []
   @selectedBuget = null
   @periods = []
+  @periodsAreVisible = false
+  @showPeriods = -> @periodsAreVisible = true
+  @hidePeriods = -> @periodsAreVisible = false
   $scope.selectedBudgetId = null
 
   @new = ->
