--- a/app/assets/templates/budget-manager.html.haml
+++ b/app/assets/templates/budget-manager.html.haml
@@ -41,8 +41,14 @@
         .col-md-12
           %table.table.table-striped{ 'ng-show' => 'budgetsCtrl.selectedBudget' }
             %tr
-              %th Account
-              %th{ 'ng-repeat' => 'period in budgetsCtrl.periods' } {{ period.start_date | date:'MMM yyyy' }}
+              %th.right-border Account
               %th Total
+              %th.right-border{ 'ng-hide' => 'budgetsCtrl.periodsAreVisible' } Average
+              %th{ 'ng-repeat' => 'period in budgetsCtrl.periods', 'ng-show' => 'budgetsCtrl.periodsAreVisible' } {{ period.start_date | date:'MMM yyyy' }}
+              %th{ :class => 'button-column' }
+                %button.btn.btn-xs.btn-default{ 'ng-click' => 'budgetsCtrl.showPeriods()', 'ng-hide' => 'budgetsCtrl.periodsAreVisible', :title => 'Click here to show period details.' }
+                  %span.glyphicon.glyphicon-eye-open{ 'arial-hidden' => true }
+                %button.btn.btn-xs.btn-default{ 'ng-click' => 'budgetsCtrl.hidePeriods()', 'ng-show' => 'budgetsCtrl.periodsAreVisible', :title => 'Click here to hide period details.' }
+                  %span.glyphicon.glyphicon-eye-close{ 'arial-hidden' => true }
           %p
             %button.btn.btn-primary{ 'ng-click' => 'budgetsCtrl.newItem()' } Add
